<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.WelcomeActivity">

    <ImageView
        android:id="@+id/imageViewBannerLogo"
        android:layout_width="320dp"
        android:layout_height="125dp"
        app:layout_constraintBottom_toTopOf="@+id/appDesignerText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.10"
        app:srcCompat="@drawable/boimama_banner_logo" />

    <TextView
        android:id="@+id/textViewBannerHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:text="@string/textViewBannerHeading"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/imageViewBannerLogo"
        app:layout_constraintStart_toStartOf="@+id/imageViewBannerLogo"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBannerLogo" />

    <TextView
        android:id="@+id/textViewBannerMessage"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/textViewBannerMessage"
        app:layout_constraintEnd_toEndOf="@+id/textViewBannerHeading"
        app:layout_constraintStart_toStartOf="@+id/textViewBannerHeading"
        app:layout_constraintTop_toBottomOf="@+id/textViewBannerHeading" />

    <Button
        android:backgroundTint="@android:color/transparent"
        android:id="@+id/buttonLogin"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/inter"
        android:text="@string/buttonLogin"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textViewBannerMessage"
        app:layout_constraintStart_toStartOf="@+id/textViewBannerMessage"
        app:layout_constraintTop_toBottomOf="@+id/textViewBannerMessage"
        app:strokeColor="@color/app_blue"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/textViewForNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:text="@string/textViewForNewUser"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
        app:layout_constraintStart_toStartOf="@+id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <Button
        android:backgroundTint="@android:color/transparent"
        android:id="@+id/buttonRegister"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/inter"
        android:text="@string/buttonRegister"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textViewForNewUser"
        app:layout_constraintStart_toStartOf="@+id/textViewForNewUser"
        app:layout_constraintTop_toBottomOf="@+id/textViewForNewUser"
        app:strokeColor="@color/dark_grey"
        app:strokeWidth="2dp"/>

    <TextView
        android:id="@+id/textViewOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:text="@string/textViewOr"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/buttonRegister"
        app:layout_constraintStart_toStartOf="@+id/buttonRegister"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

    <Button
        android:backgroundTint="@android:color/transparent"
        android:id="@+id/buttonGuestUser"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter"
        android:text="@string/buttonGuestUser"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textViewOr"
        app:layout_constraintStart_toStartOf="@+id/textViewOr"
        app:layout_constraintTop_toBottomOf="@+id/textViewOr"
        app:strokeColor="@color/dark_grey"
        app:strokeWidth="2dp" />


    <TextView
        android:id="@+id/appDesignerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:gravity="center"
        android:text="@string/appDesignerText"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>