<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlayoutProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_dark_grey"
    tools:context=".user.ProfileActivity">

    <ImageButton
        android:id="@+id/imageButtonClose"
        android:layout_width="25dp"
        android:layout_height="25dp"
        app:srcCompat="@drawable/cancel_icon"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@android:color/transparent"
        app:borderWidth="2dp"
        app:shapeAppearanceOverlay="@style/round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewProfileImageContainer"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@android:color/transparent"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageViewEditIcon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="1dp"
                android:forceHasOverlappingRendering="true"
                android:src="@drawable/camera_icon"
                android:tint="@color/app_light_grey" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewProfileImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="100dp"
                app:cardElevation="0dp"
                android:backgroundTint="@android:color/transparent"
                app:borderWidth="0dp"
                app:shapeAppearanceOverlay="@style/round">

                <ImageView
                    android:id="@+id/imageViewProfileImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/no_image" />
            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/userDisplayNameContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/cardViewProfileImageContainer"
        app:layout_constraintStart_toStartOf="@+id/cardViewProfileImageContainer"
        app:layout_constraintTop_toBottomOf="@+id/cardViewProfileImageContainer" >

        <TextView
            android:id="@+id/textViewUserDisplayName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/love_ya_like_a_sister"
            android:text="@string/textViewUserDisplayName"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/editIconDisplayName"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/edit_icon"
            app:layout_constraintBottom_toBottomOf="@+id/textViewUserDisplayName"
            app:layout_constraintStart_toEndOf="@+id/textViewUserDisplayName"
            app:layout_constraintTop_toTopOf="@+id/textViewUserDisplayName" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/editTextUserDisplayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_shape_dark"
        android:strokeColor="@color/white"
        android:hint="@string/editTextGuestDisplayNamePlaceholder"
        android:inputType="text"
        android:paddingHorizontal="20sp"
        android:paddingVertical="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/app_light_grey"
        app:cornerRadius="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/cardViewProfileImageContainer"
        app:layout_constraintStart_toStartOf="@+id/cardViewProfileImageContainer"
        app:layout_constraintTop_toBottomOf="@+id/cardViewProfileImageContainer"/>

    <View
        android:id="@+id/dividerProfileCard"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/cardViewProfileImageContainer"
        app:layout_constraintStart_toStartOf="@+id/cardViewProfileImageContainer"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserDisplayName" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/cardViewProfileImageContainer"
        app:layout_constraintStart_toStartOf="@+id/cardViewProfileImageContainer"
        app:layout_constraintTop_toBottomOf="@+id/dividerProfileCard">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButtonAddStory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/add_icon"
            android:drawablePadding="10dp"
            android:fontFamily="@font/inter"
            android:textAllCaps="false"
            android:text="@string/appCompatButtonAddStory"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButtonSavedStories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/my_articles_icon"
            android:drawablePadding="10dp"
            android:fontFamily="@font/inter"
            android:textAllCaps="false"
            android:text="@string/appCompatButtonSavedStories"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButtonStartReading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/reading_icon"
            android:drawablePadding="10dp"
            android:fontFamily="@font/inter"
            android:textAllCaps="false"
            android:text="@string/appCompatButtonStartReading"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>