<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:elevation="5dp"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_marginTop="8dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardViewStory"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewStoryTitle"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/inter"
            android:maxLines="2"
            android:text="@string/textViewStoryTitle"
            android:textColor="@color/blue"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewAuthorImage"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="100dp"
            app:layout_constraintBottom_toBottomOf="@+id/textViewStoryTitle"
            app:layout_constraintEnd_toStartOf="@+id/textViewAuthorName"
            app:layout_constraintTop_toTopOf="@+id/textViewStoryTitle">

            <ImageView
                android:id="@+id/imageViewAuthorImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/author"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textViewAuthorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/inter"
            android:maxWidth="75sp"
            android:maxLines="1"
            android:text="Ai Author"
            android:textAlignment="center"
            android:textColor="@color/app_dark_grey"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/cardViewAuthorImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cardViewAuthorImage" />

        <TextView
            android:id="@+id/textViewStoryMetadata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/inter"
            android:maxLines="1"
            android:text="Feb 19, 2024 . 54 mins"
            android:textAlignment="center"
            android:textColor="@color/app_dark_grey"
            android:textSize="10sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewStoryTitle" />

        <View
            android:id="@+id/dividerStoryCard"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="@+id/textViewAuthorName"
            app:layout_constraintStart_toStartOf="@+id/textViewStoryTitle"
            app:layout_constraintTop_toBottomOf="@id/textViewStoryMetadata" />

        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/frameLayoutStoryShortContent"
            android:layout_width="0dp"
            android:layout_height="170dp"
            app:layout_constraintEnd_toEndOf="@+id/dividerStoryCard"
            app:layout_constraintStart_toStartOf="@+id/dividerStoryCard"
            app:layout_constraintTop_toBottomOf="@id/dividerStoryCard">

            <TextView
                android:id="@+id/textViewStoryShortContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/inter"
                android:letterSpacing="0.02"
                android:lineHeight="22sp"
                android:maxLines="6"
                android:text="This is my content This is my content This is my content This is my content This is my content This is my content This is my content This is my content This is my content This is my content This is my content This is my content This is my content This is my content This is my content This is my content This is my content This is my content This is my content This is my content This is my content "
                android:textColor="@color/black"
                android:textSize="15sp"
                android:visibility="visible"/>

            <ImageView
                android:id="@+id/imageViewStory"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/no_image"
                android:visibility="invisible" />

        </FrameLayout>

        <Button
            android:id="@+id/buttonReadMore"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/blue"
            android:text="@string/buttonReadMore"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/frameLayoutStoryShortContent"
            app:layout_constraintTop_toBottomOf="@id/frameLayoutStoryShortContent" />

        <ImageButton
            android:id="@+id/imageButtonSaveUnsaveStory"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/buttonReadMore"
            app:layout_constraintEnd_toEndOf="@+id/frameLayoutStoryShortContent"
            app:layout_constraintTop_toTopOf="@+id/buttonReadMore"
            app:srcCompat="@drawable/saved_icon" />

        <ImageButton
            android:id="@+id/imageButtonLikeStory"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/buttonReadMore"
            app:layout_constraintEnd_toStartOf="@+id/imageButtonSaveUnsaveStory"
            app:layout_constraintTop_toTopOf="@+id/buttonReadMore"
            app:srcCompat="@drawable/like_deselected_icon" />

        <TextView
            android:id="@+id/textViewLikesCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/love_ya_like_a_sister"
            android:text="@string/textViewLikesCount"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/buttonReadMore"
            app:layout_constraintEnd_toStartOf="@+id/imageButtonLikeStory"
            app:layout_constraintTop_toTopOf="@+id/buttonReadMore" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierStoryTtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="textViewStoryTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
